MultiIndexBlock may access deleted collection after recovering from yield

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

       mongod(_ZN5mongo15printStackTraceERSo+0x3A) [0x106fb4bca]
       mongod(_ZN5mongo12_GLOBAL__N_124abruptQuitWithAddrSignalEiP9__siginfoPv+0x240) [0x106fb4650]
       libsystem_platform.dylib(_sigtramp+0x1A) [0x7fff8a465f1a]
       mongod(_ZN5mongo14CmdCreateIndex3runEPNS_16OperationContextERKSsRNS_7BSONObjEiRSsRNS_14BSONObjBuilderEb+0x0) [0x106892570]
       mongod(_ZN5mongo15MultiIndexBlockD2Ev+0xAE) [0x10685c10e]
       mongod(_ZN5mongo14CmdCreateIndex3runEPNS_16OperationContextERKSsRNS_7BSONObjEiRSsRNS_14BSONObjBuilderEb+0x1B39) [0x1068940a9]
       mongod(_ZN5mongo18WriteBatchExecutor13execOneInsertEPNS0_16ExecInsertsStateEPPNS_16WriteErrorDetailE+0xD3E) [0x1069132ee]
       mongod(_ZN5mongo18WriteBatchExecutor11execInsertsERKNS_21BatchedCommandRequestEPSt6vectorIPNS_16WriteErrorDetailESaIS6_EE+0x34D) [0x10690fa0d]
       mongod(_ZN5mongo18WriteBatchExecutor11bulkExecuteERKNS_21BatchedCommandRequestEPSt6vectorIPNS_19BatchedUpsertDetailESaIS6_EEPS4_IPNS_16WriteErrorDetailESaISB_EE+0x1A5) [0x10690f1a5]
       mongod(_ZN5mongo18WriteBatchExecutor12executeBatchERKNS_21BatchedCommandRequestEPNS_22BatchedCommandResponseE+0x64B) [0x10690d97b]
       mongod(_ZN5mongo8WriteCmd3runEPNS_16OperationContextERKSsRNS_7BSONObjEiRSsRNS_14BSONObjBuilderEb+0x1F6) [0x106918396]
       mongod(_ZN5mongo12_execCommandEPNS_16OperationContextEPNS_7CommandERKSsRNS_7BSONObjEiRSsRNS_14BSONObjBuilderEb+0x3A) [0x10693212a]
       mongod(_ZN5mongo7Command11execCommandEPNS_16OperationContextEPS0_iPKcRNS_7BSONObjERNS_14BSONObjBuilderEb+0xD02) [0x106933312]
       mongod(_ZN5mongo12_runCommandsEPNS_16OperationContextEPKcRNS_7BSONObjERNS_11_BufBuilderINS_16TrivialAllocatorEEERNS_14BSONObjBuilderEbi+0x719) [0x106934639]
       mongod(_ZN5mongo8runQueryEPNS_16OperationContextERNS_7MessageERNS_12QueryMessageERKNS_15NamespaceStringERNS_5CurOpES3_b+0x297) [0x106b5fcf7]
       mongod(_ZN5mongo16assembleResponseEPNS_16OperationContextERNS_7MessageERNS_10DbResponseERKNS_11HostAndPortEb+0x6D9) [0x106a2ded9]
       mongod(_ZN5mongo16MyMessageHandler7processERNS_7MessageEPNS_21AbstractMessagingPortEPNS_9LastErrorE+0xB9) [0x106711c79]
       mongod(_ZN5mongo17PortMessageServer17handleIncomingMsgEPv+0x246) [0x106f64336]
       mongod(_ZN5boost12_GLOBAL__N_112thread_proxyEPv+0xB1) [0x106ff3ca1]
       libsystem_pthread.dylib(_pthread_body+0x83) [0x7fff8df23268]
       libsystem_pthread.dylib(_pthread_body+0x0) [0x7fff8df231e5]
       libsystem_pthread.dylib(thread_start+0xD) [0x7fff8df2141d]
      

            Assignee:
            Kaloian Manassiev
            Reporter:
            Kaloian Manassiev
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: