SERVER-17436 Don't try to access collection pointer if it gets deleted during index build