src/mongo/db/catalog/index_catalog.h
@@ -153,7 +153,7 @@ namespace mongo {
 
             bool _includeUnfinishedIndexes;
 
-            OperationContext* _txn;
+            OperationContext* const _txn;
             const IndexCatalog* _catalog;
             IndexCatalogEntryContainer::const_iterator _iterator;
 
@@ -263,9 +263,9 @@ namespace mongo {
             IndexCatalogEntry* getEntry() { return _entry; }
 
         private:
-            Collection* _collection;
-            IndexCatalog* _catalog;
-            std::string _ns;
+            Collection* const _collection;
+            IndexCatalog* const _catalog;
+            const std::string _ns;
 
             BSONObj _spec;
 
@@ -358,7 +358,7 @@ namespace mongo {
         Status _doesSpecConflictWithExisting( OperationContext* txn, const BSONObj& spec ) const;
 
         int _magic;
-        Collection* _collection;
+        Collection* const _collection;
         const int _maxNumIndexesAllowed;
 
         IndexCatalogEntryContainer _entries;
